﻿2007-02-26  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* configure.ac: Made OpenGL enabled by default.

2007-02-26  Philipp Sehmisch  <tmw@crushnet.org>

	* data/sfx/maggot-dying1.ogg, data/sfx/maggot-hit1.ogg,
	data/sfx/maggot-hit2.ogg, data/sfx/maggot-miss1.ogg,
	data/sfx/pinkie-hit1.ogg, data/sfx/pinkie-miss1.ogg,
	data/monsters.xml: New sound effects by Cosmostrator.

2007-02-21  Philipp Sehmisch  <tmw@crushnet.org>

	* src/gui/char-server.cpp, src/gui/updatewindow.cpp, src/gui/main.cpp,
	src/gui/main.h: Added a new state "LOADDATA_STATE" that loads the XML
	databases.
	* src/resourcemanager.cpp, src/resourcemanager.h, src/main.cpp,
	customdata/: Added a customdata dir that allows to add custom user
	data easily. Just create a zip file with the same structure like the
	update archives and drop it in the customdata folder and the files in
	it override the default data and the updates.

2007-02-20  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/log.cpp: Applied patch by trapdoor to fix the usage of a
	deprecated function on MacOS X 10.4 and later.
	* src/being.cpp, src/monster.cpp, src/net/beinghandler.cpp,
	src/localplayer.h, src/being.h, src/monster.h: Now different sounds
	can play when a monster misses the player.
	* src/main.cpp: Applied patch by trapdoor which makes TMW use a more
	standard location for the data on MacOS X.

2007-02-17  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* data/help/header.txt, NEWS, README: Updated release date.
	* data/graphics/sprites/Makefile.am,
	data/graphics/sprites/CMakeLists.txt, data/graphics/CMakeLists.txt:
	Excluded sprites directory from installed files.

2007-02-16  Rogier Polak  <rogier.l.a.polak@gmail.com>

	* src/gui/updatewindow.cpp: Fixed the update bug (hopefully), by
	modifying the usage of the synchronisation between threads. Added a
	check for existence of the updated file.

2007-02-15  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/winver.h, README, configure.ac, data/help/header.txt, NEWS,